--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   background-image: url("https://www.ciacontabilmaef.com.br/wp-content/uploads/2021/12/IMAGEM-4-768x432.png");
   background-color: #000000;
   background-size: 200vh;
-  background-position: center up;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
