--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ a {
   text-decoration: none;
   color: white;
   background-color: yellowgreen;
+  padding: 0em 1em 0em 1em;
 }
 
 input[type="number"]::-webkit-inner-spin-button {
