--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   min-height: 400px;
   background-image: url("https://www.ciacontabilmaef.com.br/wp-content/uploads/2021/12/IMAGEM-4-768x432.png");
   background-color: #000000;
-  background-size: 200vh;
+  background-size: 200vh 200vw;
   background-position: center;
   background-repeat: no-repeat;
 }
