--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   background-image: url("https://www.ciacontabilmaef.com.br/wp-content/uploads/2021/12/IMAGEM-4-768x432.png");
   background-color: #000000;
   background-size: 100vh;
+  background-size: 100vw;
   background-position: center;
   background-repeat: no-repeat;
 }
