--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Hurricane', cursive;
 }
+
+@import url ('https://fonts.googleapis.com/css2? família=Furacão&display=swap');
 
 body {
   font-family: "Roboto Mono", monospace;
