--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Hurricane', cursive;
 }
 
 @import url ('https://fonts.googleapis.com/css2? família=Furacão&display=swap');
@@ -104,4 +103,11 @@ input[type="button"] {
   height: 3em;
   width: 4em;
   border-radius: 1em 1em 1em 1em;
+}
+
+@media only screen and (max-width: 600em) {
+  body {
+    background-size: 100vh;
+    background-size: 100vw ;
+  }
 }
