--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   font-family: "Roboto Mono", monospace;
   min-height: 400px;
   background-color: #000000;
-  background-imagem: url("https://www.ciacontabilmaef.com.br/wp-content/uploads/2021/12/IMAGEM-4-768x432.png")
+  background-imagem: url("https://www.ciacontabilmaef.com.br/wp-content/uploads/2021/12/IMAGEM-4-768x432.png");
   background-size: 100vh;
   background-size: 100vw;
   background-position: center;
