--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 body {
   font-family: "Roboto Mono", monospace;
   min-height: 400px;
-  background-color: #000000;
   background-imagem: url("https://www.ciacontabilmaef.com.br/wp-content/uploads/2021/12/IMAGEM-4-768x432.png");
+  background-color: #000000;
   background-size: 100vh;
   background-size: 100vw;
   background-position: center;
@@ -109,7 +109,7 @@ input[type="button"] {
 @media screen and (max-width: 198px) {
   .container {  }
   body {
-    background-image: url("");
+    background-image: none;
     background-color: blue;
   }
     
