--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 
-@import url ('https://fonts.googleapis.com/css2? família=Furacão&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
 body {
   font-family: "Roboto Mono", monospace;
