--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ input[type="number"] {
 input[type="button"]:hover {
   background-color: graytext;
   color: white;
+  cursor: pointer;
 }
 
 input[type="button"] {
